carousel: fix display issues on mobile
- Make carousel captions smaller on mobile so they don't cover the
entire image
- Vertically center image in carousel on mobile
- Adjust gradient on caption scrim so it works better on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -59,6 +59,7 @@ body {
   display: block;
   margin: 0 auto;
   height: 100%;
+  width: 100%;
 }
 
 .carousel-item > img.back-image {
@@ -66,6 +67,18 @@ body {
   object-fit: cover;
   object-position: center center;
   filter: blur(7px);
+}
+
+@media (max-width: 767px) {
+    .carousel-item h1 {
+        font-size: 2rem;
+    }
+    .carousel-item {
+        font-size: 0.75rem;
+    }
+    .carousel-caption {
+        background: linear-gradient(to bottom, rgba(0,0,0,0), rgba(0,0,0,0.6) 25%, rgba(0,0,0,0.8));
+    }
 }
 
 
